<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/statusBarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"></LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/titleBG">

        <com.zhangliangming.hp.ui.widget.BaseImageView
            android:id="@+id/title_user_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/padding"
            android:text="@string/title_user_icon"
            android:textColor="#ffffff"
            android:textSize="@dimen/title_icon_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/padding"
            android:layout_toRightOf="@+id/title_user_icon"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#ffffff" />

        <com.zhangliangming.hp.ui.widget.PressedRelativeLayout
            android:id="@+id/scanButton"
            android:layout_width="@dimen/title_height"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:clickable="true">

            <com.zhangliangming.hp.ui.widget.BaseImageView
                android:id="@+id/title_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/title_scan_icon"
                android:textColor="#ffffff"
                android:textSize="@dimen/title_icon_size" />
        </com.zhangliangming.hp.ui.widget.PressedRelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/content_main_center"></include>

        <include layout="@layout/content_main_playbar"></include>

    </RelativeLayout>
</LinearLayout>
